--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,12 @@ dependencies {
     compile 'net.gotev:uploadservice-okhttp:3.2.4'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
-    compile 'com.firebaseui:firebase-ui:2.0.1'
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-crash:11.0.2'
+    compile 'com.firebaseui:firebase-ui-auth:2.0.1'
+    compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'com.google.android.gms:play-services-gcm:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile group: 'com.iceteck.silicompressorr', name: 'silicompressor', version: '2.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
@@ -123,7 +128,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
     compile("com.github.hotchemi:permissionsdispatcher:2.4.0") {
         exclude module: "support-v13"
     }
