--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
+def uploadServiceVersion = "3.4"
+def permissionsDispatcherVersion = "2.4.0"
+
 Properties props = new Properties()
 try {
     props.load(file('loystar.properties').newDataInputStream())
@@ -14,12 +17,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "co.loystar.loystarbusiness"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 75
         versionName '1.5'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -84,31 +87,35 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:palette-v7:25.4.0'
-    compile 'com.android.support:exifinterface:25.4.0'
-    compile 'com.android.support:customtabs:25.4.0'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support:preference-v7:25.4.0'
-    compile 'com.android.support:cardview-v7:25.4.0'
-    compile 'com.android.support:support-v4:25.4.0'
-    compile 'com.android.support:percent:25.4.0'
+    compile "net.gotev:uploadservice-okhttp:$uploadServiceVersion"
+    compile "net.gotev:uploadservice:$uploadServiceVersion"
+    compile("com.github.hotchemi:permissionsdispatcher:$permissionsDispatcherVersion") {
+        exclude module: "support-v13"
+    }
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsDispatcherVersion"
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:support-vector-drawable:26.0.2'
+    compile 'com.android.support:palette-v7:26.0.2'
+    compile 'com.android.support:exifinterface:26.0.2'
+    compile 'com.android.support:customtabs:26.0.2'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.android.support:preference-v7:26.0.2'
+    compile 'com.android.support:cardview-v7:26.0.2'
+    compile 'com.android.support:support-v4:26.0.2'
+    compile 'com.android.support:percent:26.0.2'
     compile 'com.robertlevonyan.view:MaterialChipView:1.0.1'
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.5.0'
     compile 'io.smooch:core:latest.release'
     compile 'io.smooch:ui:latest.release'
     compile 'com.github.armcha:Vertical-Intro:2.0.0'
     compile group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.github.clans:fab:1.6.4'
-    compile 'net.gotev:uploadservice:3.2.4'
-    compile 'net.gotev:uploadservice-okhttp:3.2.4'
     compile 'org.greenrobot:greendao:3.2.2'
-    compile 'com.google.firebase:firebase-auth:11.0.2'
-    compile 'com.google.firebase:firebase-core:11.0.2'
-    compile 'com.google.firebase:firebase-crash:11.0.2'
-    compile 'com.firebaseui:firebase-ui-auth:2.0.1'
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-crash:11.2.0'
+    compile 'com.firebaseui:firebase-ui-auth:2.3.0'
+    compile 'com.google.android.gms:play-services-auth:11.2.0'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile group: 'com.iceteck.silicompressorr', name: 'silicompressor', version: '2.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
@@ -126,10 +133,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile("com.github.hotchemi:permissionsdispatcher:2.4.0") {
-        exclude module: "support-v13"
-    }
-    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:2.4.0"
     compile group: 'com.mixpanel.android', name: 'mixpanel-android', version: '5.1.4'
     testCompile 'junit:junit:4.12'
 }
