--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,21 @@
         android:name="android.permission.AUTHENTICATE_ACCOUNTS"
         android:maxSdkVersion="22" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-
     <uses-permission
         android:name="android.permission.MANAGE_ACCOUNTS"
         android:maxSdkVersion="22" />
-
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission
+        android:name="android.permission.USE_CREDENTIALS"
+        android:maxSdkVersion="22" />
+    <uses-permission
+        android:name="android.permission.USE_CREDENTIALS"
+        android:maxSdkVersion="22" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
@@ -31,14 +36,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:replace="android:icon"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
         <provider
             android:name=".sync.StubProvider"
             android:authorities="co.loystar.loystarbusiness.provider"
             android:exported="false"
             android:label="Loystar Sync"
             android:syncable="true" />
+
         <service
             android:name=".sync.AuthenticatorService"
             android:enabled="true"
@@ -46,6 +52,7 @@
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
@@ -63,6 +70,7 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
         </service>
+
         <activity
             android:name=".activities.ProductsActivity"
             android:label="@string/title_activity_products_view"
@@ -185,7 +193,7 @@
         <activity
             android:name=".activities.AppIntro"
             android:label="@string/title_activity_app_intro"
-            android:theme="@style/VerticalIntroStyle"/>
+            android:theme="@style/VerticalIntroStyle" />
         <activity
             android:name=".activities.PaySubscription"
             android:label="@string/title_activity_pay_subscription"
@@ -271,8 +279,9 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            tools:replace="android:value"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook_app_id"
+            tools:replace="android:value" />
+
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -313,12 +322,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.SettingsActivity" />
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.mixpanel.android.MPConfig.AutoShowMixpanelUpdates"
             android:value="false" />
+
         <activity
             android:name=".activities.MerchantSignUpActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -338,7 +349,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.CustomerListActivity" />
         </activity>
-
+        <activity
+            android:name=".activities.ConfirmPasswordResetActivity"
+            android:label="@string/title_activity_confirm_password_reset"
+            android:parentActivityName=".activities.ForgotPasswordActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.loystar.loystarbusiness.activities.ForgotPasswordActivity" />
+        </activity>
     </application>
 
 </manifest>
