--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,10 @@
             android:name=".activities.ForgotPasswordActivity"
             android:label="@string/title_activity_forgot_password"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activities.AppIntro"
+            android:label="@string/title_activity_app_intro"
+            android:theme="@style/VerticalIntroStyle" />
     </application>
 
 </manifest>
