--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -110,6 +111,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.roughike:bottom-bar:2.3.1'
     testCompile 'junit:junit:4.12'
 }
 
