--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
         }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
