--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 def requeryVersion = "1.4.0"
+def permissionsDispatcherVersion = "2.4.0"
+def uploadServiceVersion = "3.4"
 
 Properties props = new Properties()
 try {
@@ -88,6 +90,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -104,7 +107,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.0'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.github.armcha:Vertical-Intro:2.0.0'
     compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
@@ -112,7 +115,15 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
+    compile "net.gotev:uploadservice-okhttp:$uploadServiceVersion"
+    compile "net.gotev:uploadservice:$uploadServiceVersion"
+    compile("com.github.hotchemi:permissionsdispatcher:$permissionsDispatcherVersion") {
+        exclude module: "support-v13"
+    }
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsDispatcherVersion"
     testCompile 'junit:junit:4.12'
 }
 
