settings screen in progress.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,9 +102,14 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-vector-drawable:26.1.0'
-    compile 'com.google.firebase:firebase-core:11.4.2'
-    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-location:11.6.0'
+    compile 'com.google.firebase:firebase-messaging:11.6.0'
+    compile 'com.google.firebase:firebase-core:11.6.0'
+    compile 'com.google.firebase:firebase-auth:11.6.0'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+    compile 'io.smooch:core:5.4.0'
+    compile 'io.smooch:ui:5.4.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
