--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,12 +86,16 @@ android {
         exclude 'META-INF/dependencies.txt'
         exclude 'META-INF/LGPL2.1'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -115,16 +119,21 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.github.armcha:Vertical-Intro:2.0.0'
-    compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.8.5'
-    compile group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
+    compile 'com.googlecode.libphonenumber:libphonenumber:8.8.5'
+    compile 'net.sourceforge.jexcelapi:jxl:2.6.12'
     compile "net.gotev:uploadservice-okhttp:$uploadServiceVersion"
     compile "net.gotev:uploadservice:$uploadServiceVersion"
     compile("com.github.hotchemi:permissionsdispatcher:$permissionsDispatcherVersion") {
