--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,8 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.robertlevonyan.view:MaterialChipView:1.1.3'
+    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile 'id.zelory:compressor:2.1.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
