--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission
         android:name="android.permission.AUTHENTICATE_ACCOUNTS"
         android:maxSdkVersion="22" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission
         android:name="android.permission.MANAGE_ACCOUNTS"
@@ -331,6 +333,10 @@
         <activity
             android:name=".activities.AddStampsActivity"
             android:label="@string/title_activity_add_stamps"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.BluetoothDeviseListActivity"
+            android:label="@string/title_activity_bluetooth_devise_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
